--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -1,14 +1,13 @@
 {
     // C/C++ settings
     "C_Cpp.intelliSenseEngine": "Default",
+    "C_Cpp.updateChannel": "Insiders",,
     //"C_Cpp.inactiveRegionOpacity": 1.0,
     //"C_Cpp.inactiveRegionForegroundColor": "#c0c0c0",
 
     //Python settings
-    "python.pythonPath": "/usr/bin/python3.6",
-
+    //"python.pythonPath": "/usr/bin/python3.6",
     "python.linting.enabled": true,
-
     //"python.linting.pylintPath": "/usr/local/bin/pylint",
     "python.linting.pylintArgs": [
         "--disable=C0103, C0111, W0401, W0614, E1101, W1202",
@@ -17,34 +16,9 @@
 
     "python.autoComplete.addBrackets": true,
 
-    // "python.linting.pep8Enabled": true,
-    // //"python.linting.pep8Path": "/usr/local/bin/pep8",
-    // "python.linting.pep8Args": [
-    //     "-aa --max-line-length=110"
-    // ],
-    // //"python.formatting.autopep8Path": "/usr/local/bin/autopep8",
-    // "python.formatting.provider": "autopep8",
-
-
-    // Unittest
-    //"python.unitTest.unittestEnabled": false,
-    //"python.unitTest.nosetestsEnabled": false,
-    //"python.unitTest.pyTestEnabled": true,
-    //"python.unitTest.pyTestPath": "/usr/local/bin/pytest",
-
-    //"python.unitTest.pyTestArgs": [
-    //    "-c",
-    //    "/home/isircu/fly/test/tsf/pytest.ini",
-    //    "-s",
-    //    "-v",
-    //    "--no-cov",
-    //    "-k wpan"
-    //],
-
-
-    "diffEditor.ignoreTrimWhitespace": false,
 
     // Extension and editor preferences
+    "diffEditor.ignoreTrimWhitespace": false,
 
     "files.insertFinalNewline": true,
     // "editor.fontFamily": "Fira Mono",
@@ -80,12 +54,12 @@
     "explorer.confirmDragAndDrop": false,
 
     "telemetry.enableCrashReporter": false,
-
+    "telemetry.enableTelemetry": false,
 
     "window.titleBarStyle": "custom",
     "breadcrumbs.enabled": true,
     "editor.renderControlCharacters": true,
-    "workbench.colorTheme": "Braver's Solarized Dark (themed workbench)",
-    "http.proxy": "http://106.1.216.121:8080/"
+    "workbench.colorTheme": "One Dark Pro Bold",
+    "update.channel": "manual",
+    "http.proxyStrictSSL": false,
 }
-
