--- a/config/i3/config
+++ b/config/i3/config
@@ -11,6 +11,7 @@
 #exec --no-startup-id compton -b
 exec --no-startup-id feh --randomize --bg-fill ~/.dotfiles/other/Wallpapers/*
 exec --no-startup-id urxvtd -q -f -o
+exec --no-startup-id setxkbmap -layout dk 
 set $mod Mod4
 #exec --no-startup-id xrandr --dpi 100
 #exec --no-startup-id redshift-gtk
@@ -69,11 +70,15 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
+
 #bindsym $mod+d exec synapse
 # There also is the (new)  which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 #bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+
+#bindsym $mod+d exec rofi -show run -font "Source Code Pro for Powerline 18" -fg "#505050" -bg "#000000" -hlfg "#ffb964" -hlbg "#000000" -o 50
+#bindsym $mod+Shift+d exec rofi -show drun -font "Source Code Pro for Powerline 18" -fg "#505050" -bg "#000000" -hlfg "#ffb964" -hlbg "#000000" -o 50
 
 ################################################################################################
 ## sound-section - DO NOT EDIT if you wish to automatically upgrade Alsa -> Pulseaudio later! ##
