Minor fixes. Changed ros version to noetic

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,3 +11,6 @@ bind -n M-Down select-pane -D
 
 # don't rename windows automatically
 set-option -g allow-rename off
+
+# mouse control (clickable windows, panes, resizable panes)
+set -g mouse on
