--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -17,9 +17,9 @@
 
     "python.autoComplete.addBrackets": true,
 
-    // "python.linting.pep8Enabled": true,
-    // //"python.linting.pep8Path": "/usr/local/bin/pep8",
-    // "python.linting.pep8Args": [
+    // "python.linting.pycodestyleEnabled": true,
+    // //"python.linting.pycodestylePath": "/usr/local/bin/pep8",
+    // "python.linting.pycodestyleArgs": [
     //     "-aa --max-line-length=110"
     // ],
     // //"python.formatting.autopep8Path": "/usr/local/bin/autopep8",
@@ -85,7 +85,7 @@
     "window.titleBarStyle": "custom",
     "breadcrumbs.enabled": true,
     "editor.renderControlCharacters": true,
-    "workbench.colorTheme": "One Dark Pro Bold",
+    "workbench.colorTheme": "One Dark Pro",
     "C_Cpp.updateChannel": "Insiders"
 }
 
